--- a/fileMetadata/client/homePage.html
+++ b/fileMetadata/client/homePage.html
@@ -14,6 +14,13 @@
           <li>The from file input field has the "name" attribute set to "upfile". We rely on this in testing.</li>
           <li>When I submit something, I will receive the file name, and size in bytes within the JSON response.</li>
         </ol>
-        <h3>Usage:</h3>
+        <div class="uploadContainer">
+          <h3>Usage:</h3>
+          <p>Please Upload a File...</p>
+          <form action="POST" action="/api/fileanalyze">
+              <input type="file" name="upfile">
+              <input type="submit" value="Upload">
+          </form>
+        </div>
   </body>
 </html>
